--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <nav class="nav"> 		
                   <ul class="pt-5">
                       <li><a href="#">About</a></li>
-                      <li><a href="#">Works</a></li>
+                      <li><a href="https://vividmaestro.github.io/UX_UI_HW_20/">Works</a></li>
                       <li><a href="#">Contact</a></li>
                   </ul>
               </nav>
